# pwl_hiring_test

./: .env.example  Cargo.toml  README.md  fly.toml
docs/: postman_collection.json
src/: main.rs
src/api/: memory.rs  mod.rs
src/api/user/: auth.rs  mod.rs
src/common/: mod.rs
src/infra/: dto.rs  mod.rs  repositories.rs
src/models/: mod.rs
