[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]

# error handling
thiserror = "2.0.12"

# datetime handling
chrono = { version = "0.4.41", features = ["serde"] }

# http framework
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }

# async runtime
tokio = { version = "1.45", features = ["full"] }

# mongo client
mongodb = { version = "3.2.3" }

# serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# password hashing
bcrypt = "0.17"

# jwt handling
jsonwebtoken = "9.3.1"

# .env loading
dotenvy = "0.15.7"

# logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
